--- a/myapp/templates/adminapp/courseattendance.html
+++ b/myapp/templates/adminapp/courseattendance.html
@@ -5,15 +5,88 @@
     <title>{{course.course_title}} {{ course.section }} Attendance</title>
 </head>
 <body>
-    <h1>Attendance for {{course.course_title}} {{ course.section }}</h1><br>
+    <h1>Attendance for {{ course.course_title }} {{ course.section }}</h1>
+    <p>{{ course.teacher.first_name }} {{ course.teacher.last_name }}</p>
+    <p>{{ course.schedule_day }} {{ course.start_time }} - {{ course.end_time }}</p>
+    <p>{{ course.room.room_name }}</p>
+    <form method="post" id="date-form">
+        {% csrf_token %}  
+        {{ form }} 
+    </form>
+    {% if students %}
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Student Name</th>
+                <th>Time-in</th>
+                <th>Time-out</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for student in students %}
+            <tr>
+                <td>{{ student.first_name }} {{ student.last_name }}</td>
+                {% if student.attendance %}
+                    <td>{{ student.attendance.time_in }}</td>
+                    <td>{{ student.attendance.time_out }}</td>
+                    <td>{{ student.attendance.status }}</td>
+                {% else %}
+                    <td></td>
+                    <td></td>
+                    <td>No Record</td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+        <div>No enrolled students at the moment.</div>
+    {% endif %}
+    <a href="{% url 'adminstudentlist' course.course_id %}">Class List</a> <a href="{% url 'students_monthly_attendance' course.course_id %}?day_date={{ form.cleaned_data.day_date|date:'Y-m-d' }}">Download</a>
     <br>
-    <a href="{% url 'addstudent' course.course_id %}">Add a Student</a><br>
-    <a href="{% url 'deletestudent' course.course_id %}">Drop a Student</a><br>
     <br>
-    <span><a href = "{% url 'adminrooms' %}">Rooms</a></span><br>
-    <span><a href = "{% url 'admincourses' %}">Courses</a></span><br>
+    <b>Teacher's Attendance</b>
+    {% if teacher_records %}
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Time-in</th>
+                <th>Time-out</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for record in teacher_records %}
+            <tr>
+                <td>{{ record.day_date }}</td>
+                <td>{{ record.time_in }}</td>
+                <td>{{ record.time_out }}</td>
+                <td>{{ record.status }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+        <div>No teacher record at the moment</div>
+    {% endif %}
+    <a href="{% url 'assign_teacher' course.course_id %}">Assign Teacher</a>
+    <br>
+    <br>
     <span><a href = "{% url 'admin:index' %}" target="_blank">Admin Hub</a></span><br>
+    <span><a href = "{% url 'admincourses' %}">Courses</a></span><br>
+    <span><a href = "{% url 'adminrooms' %}">Rooms</a></span><br>
+    <span><a href = "{% url 'nfcuid' %}">NFC UID</a></span><br>
     <br>
+    
     <span><a href = "{% url 'logout' %}">Logout</a></span>
 </body>
 </html>
+
+<script>
+    // Add an event listener to the month select field to submit the form when changed
+    document.addEventListener('change', function() {
+        document.getElementById('date-form').submit();  // Automatically submit the form
+    });
+</script>
