--- a/myapp/templates/adminapp/deleteroom.html
+++ b/myapp/templates/adminapp/deleteroom.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete a Room</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JavaScript (for modals, dropdowns, etc.) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
     {% if messages %}
@@ -19,18 +24,49 @@
     {% endfor %}
     {% endif %}
 
-    <h1>Room Deletion</h1>
-    <form name="register" method="post" novalidate action="">
-        {% csrf_token %}
-        Room Name :<input type = "text" name = "inroomname" value = "" width = "200"><br>
-        <br>
-        <button type="submit">Delete</button>
-    </form>
-    <br>
-    <span><a href = "{% url 'adminrooms' %}">Rooms</a></span><br>
-    <span><a href = "{% url 'admincourses' %}">Courses</a></span><br>
-    <span><a href = "{% url 'admin:index' %}" target="_blank">Admin Hub</a></span><br>
-    <br>
-    <span><a href = "{% url 'logout' %}">Logout</a></span>
+    <h2>Room Deletion</h2>
+
+    <center>
+        <table border="1">
+            <tbody>
+                {% for room in rooms %}
+                <tr>
+                    <td>{{ room.room_name }}</td>
+                    <td>
+                        <form method="post" action="{% url 'deleteroombutton' room.room_id %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger" onclick="return confirmDelete('{{ room.room_name }}');">
+                                Delete
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                {% empty %}
+                    <div>No room available</div>
+                {% endfor %}
+            </tbody>
+        </table>
+    </center>
+    {% comment %} <br>
+    <ul>
+        {% for room in rooms %}
+            <li>
+                <a href="{% url 'roomattendance' room.room_id %}">{{ room.room_name }}</a>
+                <form method="post" action="{% url 'deleteroombutton' room.room_id %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger" onclick="return confirmDelete('{{ room.room_name }}');">
+                        Delete
+                    </button>
+                </form>
+            </li>
+        {% empty %}
+            <li>No rooms available.</li>
+        {% endfor %}
+    </ul><br> {% endcomment %}
+    <script>
+        function confirmDelete(room_name) {
+            return confirm("Are you sure you want to delete room " + room_name + "?");
+        }
+    </script>
 </body>
 </html>
